--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2199,7 +2199,7 @@ sup {
 }
 
 a {
-  color: #007bff;
+  color: #4E5BF2;
   text-decoration: none;
   background-color: transparent;
 }
@@ -5972,7 +5972,7 @@ fieldset:disabled .wizard > .actions a,
 
 .btn-link {
   font-weight: 400;
-  color: #007bff;
+  color: #4E5BF2;
   text-decoration: none;
 }
 
@@ -6292,7 +6292,7 @@ input[type="button"].btn-block {
 .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #007bff;
+  background-color: #4E5BF2;
 }
 
 .dropdown-item.disabled,
@@ -7397,8 +7397,8 @@ input[type="button"].btn-block {
 
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #007bff;
-  background-color: #007bff;
+  border-color: #4E5BF2;
+  background-color: #4E5BF2;
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
@@ -7464,8 +7464,8 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #007bff;
-  background-color: #007bff;
+  border-color: #4E5BF2;
+  background-color: #4E5BF2;
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
@@ -7696,7 +7696,7 @@ input[type="button"].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #007bff;
+  background-color: #4E5BF2;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -7729,7 +7729,7 @@ input[type="button"].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #007bff;
+  background-color: #4E5BF2;
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -7765,7 +7765,7 @@ input[type="button"].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #007bff;
+  background-color: #4E5BF2;
   border: 0;
   border-radius: 1rem;
   -ms-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -7908,7 +7908,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #007bff;
+  background-color: #4E5BF2;
 }
 
 .nav-fill .nav-item {
@@ -8645,7 +8645,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #007bff;
+  color: #4E5BF2;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
@@ -8678,8 +8678,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #007bff;
-  border-color: #007bff;
+  background-color: #4E5BF2;
+  border-color: #4E5BF2;
 }
 
 .page-item.disabled .page-link {
@@ -9189,7 +9189,7 @@ a.badge-danger-muted.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #007bff;
+  background-color: #4E5BF2;
   transition: width 0.6s ease;
 }
 
@@ -9279,8 +9279,8 @@ a.badge-danger-muted.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #007bff;
-  border-color: #007bff;
+  background-color: #4E5BF2;
+  border-color: #4E5BF2;
 }
 
 .list-group-item + .list-group-item {
